[workspace]
resolver = "2"
members = [
    "crates/sqssh-core",
    "crates/sqssh",
    "crates/sqsshd",
    "crates/sqscp",
    "crates/sqsftp",
    "crates/sqssh-keygen",
    "crates/sqssh-agent",
    "crates/sqssh-add",
    "crates/sqssh-copy-id",
    "crates/sqssh-keyscan",
    "crates/sqsshctl",
]

[workspace.dependencies]
squic = { git = "https://github.com/wave-cl/squic-rust" }
sqssh-core = { path = "crates/sqssh-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bytes = "1"
bs58 = "0.5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.29", features = ["term", "process", "signal", "user"] }
dirs = "6"
zeroize = "1"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"
libc = "0.2"
quinn = "0.11"
whoami = "1"
tempfile = "3"
