[package]
name = "sqscp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqscp"
path = "src/main.rs"

[dependencies]
sqssh-core = { workspace = true }
squic = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
