[package]
name = "sqsftp"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "sqsftp"
path = "src/main.rs"

[dependencies]
sqssh-core = { workspace = true }
squic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quinn = { workspace = true }
