[package]
name = "sqssh-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqssh-agent"
path = "src/main.rs"

[dependencies]
sqssh-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
