[package]
name = "sqssh-core"
version = "0.1.0"
edition = "2021"

[dependencies]
squic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
ed25519-dalek = { workspace = true }
bytes = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }
tokio-util = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
