[package]
name = "sqssh-core"
version = "0.2.2"
edition = "2021"

[dependencies]
squic = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }
tokio-util = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
whoami = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
