[package]
name = "sqssh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqssh"
path = "src/main.rs"

[dependencies]
sqssh-core = { workspace = true }
squic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
whoami = { workspace = true }
quinn = { workspace = true }
ed25519-dalek = { workspace = true }
